Feature init front
edit .env
edit tailwind config

--- a/front/.env.example
+++ b/front/.env.example
@@ -1,3 +1,2 @@
-BACKEND_URL=http://localhost:3000
-TOKEN_SECRET=WEB_ANALYTICS_TOKEN_SECRET
-
+REACT_APP_API_URL=http://localhost:3000
+REACT_APP_TOKEN_SECRET=WEB_ANALAYTICS_TOKEN_SECRET
