Feature init front
fix eslint error
fix env example

--- a/front/.env.example
+++ b/front/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:3000
-REACT_APP_TOKEN_SECRET=WEB_ANALAYTICS_TOKEN_SECRET
+VITE_API_URL=http://localhost:3000
+VITE_TOKEN_SECRET=WEB_ANALYTICS_TOKEN_SECRET
