--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - ./nest-app:/usr/src/app
     ports:
       - "3000:3000"
-    command: sh -c "npm install && npm run start:dev"
+    command: sh -c "npm install --force && npm run start:dev"
 
   # =============================================================
   # POSTGRES
