--- a/nest-app/.env
+++ b/nest-app/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres?schema=public"
+MONGO_URL=mongodb://root:example@localhost:27017
