--- a/nest-app/.env.example
+++ b/nest-app/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres?schema=public"
+MONGO_URL=mongodb://root:example@localhost:27017
 MAILER_URL="smtp://example"
