--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -24,6 +24,7 @@
     "@faker-js/faker": "^8.0.2",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.0",
@@ -31,6 +32,7 @@
     "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.2",
     "nestjs-prisma": "^0.21.0",
     "nodemailer": "^6.9.3",
