--- a/front-sdk/package.json
+++ b/front-sdk/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "front-sdk",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "react-analytics-sdk-esgi",
+  "version": "1.1.0-beta.4",
+  "main": "./src/AnalyticsSDK.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,7 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "ua-parser-js": "^1.0.35",
+    "react-router-dom": "^6.14.1",
     "uuid": "^9.0.0"
   },
   "description": ""
