--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "mongoose": "^7.3.2",
